--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_PROJECT_ID =abaf3a4bf283119a8540d9a2afa0c2b4
+# NEXT_PUBLIC_PROJECT_ID =6841b4402b47def70769f14929184e66
+NEXT_PUBLIC_PROJECT_ID =ba10e7d81bb1acdfbba174b8c7a5c4b
